--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all">
   </head>
   <body>
-<h1><a href="/">Welcome - projects I am working on </a></h1>
+<h1><a href="/">Welcome - to general topics on programming </a></h1>
     <div class="container-lg px-3 my-5 markdown-body">
       {{ content }}
     </div>
